changed some rquest on rentals, changes on the yaml and started documentation
